# TIL

./: .gitignore  README.md
2018/12/: AboutJava7andJava8.md  DNS.md  DependencyInjection.md  NewInsightSite.md  ProperUseOfComments.md  RichDad.md  SevenWaysToSpeak.md  TheEssenceOfObjectOrientaion.md  ThePriceOfEnums.md  guide-to-better-git-commit-message.md  static_site_generator.md
2019/01/node.js/: .eslintrc.json  .gitignore  app.js  ejs.basic.js  ejsPage.ejs  express-test.js  index.html  jade.basic.js  jadePage.jade  main.js  module.fs.js  module.js  module.util.js  node.basic.js  node.console.js  node.process.js  node.redirect.js  node.server.js  number.format.js  otherPage.html  package.json  path-app.js  request.js  test-server.js  textfile.txt
2019/03/vgtest/: Vagrantfile
20221224/: financeDataReader.py
20221224/gradio/: app.py  sketch_recognition.py
20221230/: README.md  test300.py
20230104/: README.md  hello.rs
20230108/: README.md  mvrs.sh  new.sh  run.sh
20230108/compound-types1/: Cargo.toml
20230108/compound-types2/: Cargo.toml
20230108/dangling-referernces/: Cargo.toml
20230108/referernces/: Cargo.toml
20230108/sample-functions/: Cargo.toml
20230108/string-vs-str/: Cargo.toml
20230109/: README.md
20230109/blog_os/: Cargo.toml
20230110/: README.md
20230110/cross/: Cargo.toml
20230110/cross/rust-cross-aos/: Cargo.toml  build-android-libs.sh
20230110/cross/rust-cross-aos/src/: lib.rs
20230114/blog_os/: Cargo.toml  README.md
20230114/blog_os/src/: main.rs
20230115/vulkan-tutorial/: Cargo.toml
(+179 files in other folders)
